# triton-server

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel
src/grpc/: grpc_server.h  grpc_utils.h  infer_handler.h
